--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DB_URI=<MongoDB connection string>
 JWT_SECRET=<Secret for verification>
-
+SG_API_KEY=<apikey>
+MAIL_TRAP_USER=<User name string>
+MAIL_TRAP_PASS=<Mail password string>
